--- a/week10/left_left.html
+++ b/week10/left_left.html
@@ -45,17 +45,64 @@
             }
 
             let source = [];
-            for(let token of tokenNize("40 / 20 * 1")){
+            for(let token of tokenNize("40 / 20 * 1 + 3")){
                 if( token.type === 'Whitespace' || token.type === 'LineTerminator' ) continue;
                 source.push(token);
             }
 
             function Expression(tokens){
-
+                if(source[0].type === 'AdditiveExpression' && source[1] && source[1].type === 'EOF'){
+                    let node = {
+                        type:'Expression',
+                        children:[source.shift(),source.shift()]
+                    }
+                    source.unshift(node);
+                    return node;
+                }
+                AdditiveExpression(source);
+                return Expression(source);
             }
 
             function AdditiveExpression(source){
-
+                if( source[0].type === "MultiplicativeExpression" ){
+                    let node = {
+                        type:"AdditiveExpression",
+                        children:[source[0]]
+                    }
+                    source[0] = node;
+                    return AdditiveExpression(source);
+                }
+                if( source[0].type === 'AdditiveExpression' && source[1] && source[1].type === '+' ){
+                    let node = {
+                        type:'AdditiveExpression',
+                        operator:'+',
+                        children:[]
+                    }
+                    node.children.push(source.shift());
+                    node.children.push(source.shift());
+                    MultiplicativeExpression(source);
+                    node.children.push(source.shift());
+                    source.unshift(node);
+                    return AdditiveExpression(source);
+                }
+                if( source[0].type === 'AdditiveExpression' && source[1] && source[1].type === '-' ){
+                    let node = {
+                        type:'AdditiveExpression',
+                        operator:'-',
+                        children:[]
+                    }
+                    node.children.push(source.shift());
+                    node.children.push(source.shift());
+                    MultiplicativeExpression(source);
+                    node.children.push(source.shift());
+                    source.unshift(node);
+                    return AdditiveExpression(source);
+                }
+                if( source[0].type === 'AdditiveExpression' ){
+                    return source[0]
+                }
+                MultiplicativeExpression(source);
+                return AdditiveExpression(source);
             }
 
             function MultiplicativeExpression(source){
@@ -98,9 +145,9 @@
                 return MultiplicativeExpression(source);
             }
 
-            let multiplicativeExpresstion = MultiplicativeExpression(source);
-            console.log(multiplicativeExpresstion);
-            
+            let _source = Expression(source);
+            console.log(_source)
+
         </script>
     </body>
 </html>
