--- a/week11/proxy.html
+++ b/week11/proxy.html
@@ -5,6 +5,7 @@
     </head>
     <body></body>
     <script>
+        let callbacks = [];
         let object = {
             name: "cuishunbiao",
             age: 30,
@@ -13,16 +14,27 @@
 
         let po = reactive(object);
 
+        function effect(callback) {
+            callbacks.push(callback);
+        }
+
+        effect(() => {
+            console.log(po.name);
+        });
+
+        //包装 Proxy
         function reactive(object) {
             return new Proxy(object, {
-                //获取值的时候执行
-                get(obj, prop, value) {
-                    return obj[prop];
-                },
-                //赋值的时候执行
+                //设置属性的时候执行
                 set(obj, prop, value) {
                     obj[prop] = value;
-                    console.log(obj, prop, value);
+                    for (let call of callbacks) {
+                        call(); //循环遍历 callbacks 里面的方法
+                    }
+                    return obj[prop];
+                },
+                //获取属性的时候执行
+                get(obj, prop) {
                     return obj[prop];
                 },
             });
