--- a/week12/jsx/main.html
+++ b/week12/jsx/main.html
@@ -1,3 +1,28 @@
-<body>
-    <script src="./main.js"></script>
-</body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charest="UTF-8">
+        <style>
+            *{
+                margin: 0;
+                padding: 0;
+            }
+            .carousel{
+                width: 400px;
+                height: 300px;
+                white-space: nowrap;
+                overflow: hidden;
+            }
+            .carousel-item{
+                width: 400px;
+                height: 300px;
+                background-size: cover;
+                display: inline-block;
+                transition: ease .5s;
+            }
+        </style>
+    </head>
+    <body>
+        <script src="./main.js"></script>
+    </body>
+</html>
