完成 animation.js

--- a/week13/jsx/animation.html
+++ b/week13/jsx/animation.html
@@ -12,10 +12,16 @@
                 height: 80px;
                 background-color: black;
             }
+            .box2{
+                width: 80px;
+                height: 80px;
+                background-color:brown;
+            }
         </style>
     </head>
     <body>
         <div id="box" class="box"></div>
+        <div id="box2" class="box2"></div>
         <button id="pause">pause</button>
         <button id="resume">resume</button>
         <script type="module" src="./animation-demo.js"></script>
