--- a/week14/gesture.html
+++ b/week14/gesture.html
@@ -5,8 +5,13 @@
     <meta charset="utf-8">
 </head>
 
-<body>
+<body oncontextmenu="event.preventDefault()">
     <script src="./gesture.js"></script>
+    <script>
+        document.documentElement.addEventListener('tap',()=>{
+            console.log('tap event trihher...')
+        })
+    </script>
 </body>
 
 </html>
