--- a/week15/jsx/main.html
+++ b/week15/jsx/main.html
@@ -18,7 +18,7 @@
                 height: 300px;
                 background-size: cover;
                 display: inline-block;
-                transition: ease .5s;
+                /* transition: ease .5s; */
             }
         </style>
     </head>
