--- a/week18/server/public/index.html
+++ b/week18/server/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello World</title>
+        <title>tool的文件</title>
     </head>
     <body>
-        Hello World
+        你好111，来自本地 publish-tool。
+        pipe 使用。
     </body>
 </html>
